# purple-spin

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  spin.c  spin.h  spin_actions.c  spin_actions.h  spin_chat.c  spin_chat.h  spin_cmds.c  spin_cmds.h  spin_friends.c  spin_friends.h  spin_login.c  spin_login.h  spin_mail.c  spin_mail.h  spin_notify.c  spin_notify.h  spin_parse.c  spin_parse.h  spin_prefs.c  spin_prefs.h  spin_privacy.c  spin_privacy.h  spin_userinfo.c  spin_userinfo.h  spin_web.c  spin_web.h
pixmaps/: Makefile.am
po/: ChangeLog  Makevars  POTFILES.in  de.po  purple-spin.pot
win32/: pidgin-plugin.nsh  purple-spin.nsi
